@@ -48,7 +48,7 @@ blight.scalinghealth:killedByPlayer=Blight %s was killed by %s!
 command.outOfBounds=Value must be between %s and %s.
 command.showDifficulty=Difficulty of %s: %s / %s
 command.setDifficulty=Set difficulty of player %s to %s.
-command.showHealth=Health of %s: %s / %s
+command.showHealth=Health of %s: %s / %s (%s)
 command.setHealth=Set health of player %s to %d.
 command.showWorldDifficulty=Difficulty of the world: %s / %s
 command.setWorldDifficulty=Set difficulty of the world to %s.
