@@ -45,7 +45,7 @@ blight.scalinghealth:killedByPlayer=%s 死于 %s ！
 command.outOfBounds=该参数必须在 %s 与 %s 之间。
 command.showDifficulty=%s模式： %s / %s
 command.setDifficulty=将 %s 模式设置为 %s 模式。
-command.showHealth=%s生命值： %s / %s
+command.showHealth=%s生命值： %s / %s (%s)
 command.setHealth=将玩家生命值 %s 设置为 %d。
 
 
